--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="robots" content="noindex" />
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marco Czirpek - Web Developer</title>
   </head>
