V.102, better responsiveness, no moving things on mobile, meta description, priority loading for first image

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Marco Czirpek – graphic designer, full-stack developer, and tech enthusiast based in Cologne, Germany. This site is a personal showcase of selected work and interests." />
     <link rel="icon" type="image/svg+xml" href="/Icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marco Czirpek - Web Developer</title>
